[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/dyn_thorn@2x.png" type="Texture" id=1]
[ext_resource path="res://Scripts/dyn_thorn.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="dynamique_thorn" type="Node2D"]

[node name="graphic" type="KinematicBody2D" parent="."]
position = Vector2( 443.668, 128.289 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="graphic"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="graphic"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="graphic"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="graphic/Area2D"]
shape = SubResource( 1 )

[node name="limiteGauche" type="Position2D" parent="."]
position = Vector2( 93.4901, 107.912 )
__meta__ = {
"_gizmo_extents_": 70.0
}

[node name="limiteDroite" type="Position2D" parent="."]
position = Vector2( 747.418, 116.258 )
__meta__ = {
"_gizmo_extents_": 70.0
}

[connection signal="body_entered" from="graphic/Area2D" to="graphic" method="_on_Area2D_body_entered"]
